--- a/www/index.html
+++ b/www/index.html
@@ -19,13 +19,16 @@
         <!-- models -->
         <script type="text/javascript" src="js/models/xDeck.js"></script>
         <script type="text/javascript" src="js/models/xCard.js"></script>
+        <script type="text/javascript" src="js/models/splash.js"></script>
         
         <!-- controllers -->
         <script type="text/javascript" src="js/controllers/xDeck.js"></script>
         <script type="text/javascript" src="js/controllers/xCard.js"></script>
+        <script type="text/javascript" src="js/controllers/splash.js"></script>
         
         <!-- views -->
         <script type="text/javascript" src="js/views/xDeck.js"></script>
         <script type="text/javascript" src="js/views/xCard.js"></script>
+        <script type="text/javascript" src="js/views/splash.js"></script>
     </body>
 </html>
