--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" type="text/css" href="css/app.css">
         <link rel="stylesheet" type="text/css" href="css/spinner.css">
         <link rel="stylesheet" type="text/css" href="css/wf-nunito.css">
+        <link rel="stylesheet" type="text/css" href="css/wf-pacifico.css">
+        <link rel="stylesheet" type="text/css" href="css/wf-indie-flower.css">
         <link rel="stylesheet" type="text/css" href="lib/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="lib/brick/dist/brick.min.css">
     </head>
