Added jshintrc file

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,8 @@
         <link rel="stylesheet" type="text/css" href="lib/brick/dist/brick.min.css">
     </head>
     <body>
-        <script type="text/javascript" src="lib/pouchdb/dist/pouchdb-nightly.min.js"></script>
+        
+        <script type="text/javascript" src="lib/pouchdb/pouchdb-2.1.0.min.js"></script>
         <script type="text/javascript" src="lib/brick/dist/brick.min.js"></script>
         <script type="text/javascript" src="lib/mithril/mithril.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
@@ -35,5 +36,6 @@
         <script type="text/javascript" src="js/views/xCard.js"></script>
         <script type="text/javascript" src="js/views/splash.js"></script>
         <script type="text/javascript" src="js/views/home.js"></script>
+        
     </body>
 </html>
