--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         
-        
+        <!-- 3d party / app -->
         <script type="text/javascript" src="lib/brick/dist/brick.min.js"></script>
         <script type="text/javascript" src="lib/mithril/mithril.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
