implemented app transition for new screen

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
     <body>
         
         <!-- 3d party / app -->
-        <script type="text/javascript" src="lib/brick/dist/brick.min.js"></script>
+        <script type="text/javascript" src="lib/brick/dist/brick.js"></script>
         <script type="text/javascript" src="lib/mithril/mithril.min.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
 
